--- a/vff-simulation-docker-compose.yaml
+++ b/vff-simulation-docker-compose.yaml
@@ -20,16 +20,15 @@ services:
     env_file:
       - .env
 
-  # heat_pump_simulator:
-  #   container_name: heat_pump_simulator
-  #   build: ./server/src/containers/heat_pump_simulator
-  #   restart: unless-stopped
-  #   depends_on:
-  #     - mqtt
-  #     - vff_simulator
-  #     - temperature_sensor_simulator
-  #   env_file:
-  #     - .env
+  heat_pump_simulator:
+    container_name: heat_pump_simulator
+    build: ./server/src/containers/heat_pump_simulator
+    restart: unless-stopped
+    depends_on:
+      - mqtt
+      - vff_simulator
+    env_file:
+      - .env
 
   mqtt:
     container_name: mqtt_broker
@@ -57,7 +56,6 @@ services:
       - "8123:8123"
     depends_on:
       - mqtt
-      - temperature_sensor_simulator
     env_file:
       - .env
 
@@ -67,9 +65,25 @@ services:
     volumes:
       - influxdb:/var/lib/influxdb2
       - influxdb:/etc/influxdb2
+      - /etc/localtime:/etc/localtime:ro
     restart: unless-stopped
     ports:
       - "8086:8086"
+    env_file:
+      - .env
+
+  appdaemon:
+    container_name: appdaemon
+    image: acockburn/appdaemon:latest
+    volumes:
+      - ./server/appdaemon/config:/conf
+      - /etc/localtime:/etc/localtime:ro
+    restart: unless-stopped
+    ports:
+      - "5050:5050"
+    depends_on:
+      - homeassistant
+      - influxdb
     env_file:
       - .env
 
