--- a/server/src/config_generator/appdaemon_templates/appdaemon_apps_template.yaml
+++ b/server/src/config_generator/appdaemon_templates/appdaemon_apps_template.yaml
@@ -21,3 +21,128 @@ dummy_control:
 #   Kp: 0.1
 #   Ki: 0.01
 #   Kd: 0.05
+
+
+# hello_world:
+#   module: hello
+#   class: HelloWorld
+
+# Dummy control app
+# dummy_control:
+#   module: dummy_control
+#   class: DummyControl
+#   gain: 0.5
+#   reference_value: 22.0
+#   sensor: sensor.s_ec_01_2_temperature
+#   control_signal_topic: "ha/desktop_gf/actuators/temperature"
+
+
+
+
+
+# test: 
+#   module: test
+#   class: Test
+
+
+# level_controller_1:
+#   module: level_controller
+#   class: Level_controller
+#   fill_time: 1 # seconds
+#   sensor_entity_id: sensor.float_switch_1
+#   act_entity_id: input_boolean.relay_11
+
+# level_controller_2:
+#   module: level_controller
+#   class: Level_controller
+#   fill_time: 1 # seconds
+#   sensor_entity_id: sensor.float_switch_2
+#   act_entity_id: input_boolean.relay_12
+
+lamp_controller:
+  module: lamp_control
+  class: Lamp_control
+  ids:
+    - input_number.elixia_1_channel_450nm
+    - input_number.elixia_1_channel_5700k
+    - input_number.elixia_1_channel_660nm
+    - input_number.elixia_1_channel_735nm
+  amplitudes:
+    - 248
+    - 248
+    - 734
+    - 61
+  on_time: 16 # hours
+
+
+
+mixing_tank_ec_controller:
+  module: mixing_tank_ec_controller
+  class: Mixing_tank_ec_controller
+  ratio:
+    - 1.8 #dummy
+    - 1.2 #dummy
+    - 0.6 #dummy
+  flow_rates:
+    - 0.0004347 # l/s, should maybe be m3/s
+    - 0.0003436
+    - 0.000357
+  ec_constant: 0.0034 # dummy
+  margin: 0.05 #dummy
+  ec_ref: 0.45 # dummy
+  tank_vol: 350
+  startup_delay: 0
+  pump_ids:
+    - "input_boolean.relay_14"
+    - "input_boolean.relay_15"
+    - "input_boolean.relay_16"
+  sensor_id: "sensor.s_ec_01_2_ec"
+  mixing_wait_time: 200 # seconds
+
+growth_tank_ec_controller:
+  module: grow
+  class: Grow_tank_ec_controller
+  flow_rate: 0.0486111  # l/s (estimate)
+  vol_mix_tank: 350
+  vol_growth_tank: 100
+  epsilon: 0.05
+  ec_growth: "sensor.s_ec_01_1_ec"
+  ec_mix: "sensor.s_ec_01_2_ec"
+  startup_delay: "0"
+  solenoid_id: "input_boolean.relay_11"
+  n_tau: 4
+  tau: 70 #s
+  max_run_time: 100
+  drain_time: 150
+
+
+
+
+
+# # WIP general control app
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+# controller_app:
+#   module: controller
+#   class: PIDController
+#   sensor: sensor.temperature_farming_container
+#   actuator: light.heater
+#   setpoint: 22.5
+#   Kp: 0.1
+#   Ki: 0.01
+#   Kd: 0.05
