fixed app config

--- a/.env_template
+++ b/.env_template
@@ -340,3 +340,68 @@ P_10_HA_ICON="mdi:heat-wave"
 P_10_GAIN=0.5
 P_10_REFERENCE=22.0
 P_10_SENSOR=sensor.s_ec_01_2_temperature
+
+
+
+# Air pump controller
+AIR_PUMP_ID = "input_boolean.relay_3"
+
+
+# Intake fan controller
+HUMID_SENSOR_ID = "sensor.scd_41_humidity"
+TEMP_SENSOR_ID = "sensor.scd_41_temperature"
+INTAKE_FAN_ID = "input_boolean.relay_5"
+HUMID_LOW_ID = "input_number.intake_fan_humid_low"
+HUMID_HIGH_ID = "input_number.intake_fan_humid_high"
+TEMP_LOW_ID = "input_number.intake_fan_temp_low"
+TEMP_HIGH_ID = "input_number.intake_fan_temp_high"
+INTAKE_FAN_TOGGLE_ID = "input_boolean.intake_fan_toggle"
+
+# Lamp 1 controller
+LAMP_1_450_ID = "input_number.elixia_1_channel_450nm"
+LAMP_1_5700_ID = "input_number.elixia_1_channel_5700k"
+LAMP_1_660_ID = "input_number.elixia_1_channel_660nm"
+LAMP_1_735_ID = "input_number.elixia_1_channel_735nm"
+LAMP_1_BLUE_ID = "input_number.lamp_blue"
+LAMP_1_GREEN_ID = "input_number.lamp_green"
+LAMP_1_RED_ID = "input_number.lamp_red"
+LAMP_1_FAR_RED_ID = "input_number.lamp_far_red"
+LAMP_1_START_TIME_ID = "input_datetime.lamp_start_time"
+LAMP_1_FINISH_TIME_ID = "input_datetime.lamp_finish_time"
+LAMP_1_TOGGLE_ID = "input_boolean.lamp_control_toggle"
+
+
+
+
+# Mixing tank ec controller
+
+MIX_EC_RATIO_1 = 0.6
+MIX_EC_RATIO_2 = 1.8
+MIX_EC_RATIO_3 = 1.2
+MIX_FLOWRATE_1 = 0.0004347
+MIX_FLOWRATE_2 = 0.0003436
+MIX_FLOWRATE_3 = 0.000357
+MIX_EC_CONSTANT = 0.0034
+MIX_MARGIN = 0.01 
+MIX_TANK_VOL = 350
+MIX_PERIPUMP_ID_1 = "input_boolean.relay_14"
+MIX_PERIPUMP_ID_2 = "input_boolean.relay_15"
+MIX_PERIPUMP_ID_3 = "input_boolean.relay_16"
+MIX_EC_SENSOR_ID = "sensor.s_ec_01_2_ec"
+MIX_WAIT_TIME =  200
+MIX_TOGGLE_ID = "input_boolean.mix_control_toggle"
+MIX_EC_REF_ID = "input_number.ec_ref"
+MIX_PUMP_ID = "input_boolean.relay_2"
+
+# Grow tank ec controller
+
+GROW_FLOWRATE = 0.0486111
+GROW_TANK_VOL = 100
+GROW_EC_SENSOR_ID = "sensor.s_ec_01_1_ec"
+GROW_SOLENOID_1_ID = "input_boolean.relay_11"
+GROW_N_TAU = 4
+GROW_TAU = 70
+GROW_MAX_RUNTIME = 100 
+GROW_DRAINTIME = 150
+GROW_TOGGLE_ID = "input_boolean.grow_control_toggle"
+GROW_RESET_TIME = 3600
