--- a/server/src/config_generator/homeassistant_templates/input_boolean_template.yaml
+++ b/server/src/config_generator/homeassistant_templates/input_boolean_template.yaml
@@ -49,21 +49,22 @@
   #   icon: "mdi:toggle-switch"
 
 
-
+# These where mixed
   relay_1:
-    name: "(rl1) Water pump 5k "
+    name: "(rl1) Water pump 350 "
     icon: "mdi:toggle-switch"
   relay_2:
-    name: "(rl2) Water pump 350"
+    name: "(rl2) Water pump 5k"
     icon: "mdi:toggle-switch"
   relay_3:
     name: "(rl3) Air pump "
     icon: "mdi:toggle-switch"
+  # These were mixed
   relay_4:
-    name: "(rl4) Intake fan"
+    name: "(rl4) Internal fans"
     icon: "mdi:toggle-switch"
   relay_5:
-    name: "(rl5) Internal fans "
+    name: "(rl5) Intake fan"
     icon: "mdi:toggle-switch"
   relay_6:
     name: "(rl6) Humidifier "
@@ -98,3 +99,23 @@
   relay_16:
     name: "(rl16) Peristaltic pump 3 "
     icon: "mdi:toggle-switch"
+
+
+
+
+
+  mix_control_toggle:
+    name: "Mixing controller"
+    icon: "mdi:pot-mix"
+
+  grow_control_toggle:
+    name: "Grow tank controller"
+    icon: "mdi:water-pump"
+
+  intake_fan_toggle:
+    name: "Intake fan controller"
+    icon: "mdi:fan"
+
+  lamp_control_toggle:
+    name: "Lamp controller"
+    icon: "mdi:ceiling-light"
