Added functionality for another Elixia grow lamp

--- a/.env_template
+++ b/.env_template
@@ -405,7 +405,7 @@ MQTT_RELAY_16_CMD_REQ="cmd/relay16/req"
 RELAY_16_CMD_REQ_ON_AUTOMATION_ALIAS="Relay 16, Turn on"
 RELAY_16_CMD_REQ_OFF_AUTOMATION_ALIAS="Relay 16, Turn off"
 
-# Grow lamp: Heliospectra Elixia 
+# Grow lamp1: Heliospectra Elixia 
 LAMP_01_IP="10.10.10.10" # Replace with the IP address of the Heliospectra Elixia grow lamp
 MQTT_LAMP_01_CMD_REQ="cmd/lamp01/req"
 MQTT_LAMP_01_CMD_RES="cmd/lamp01/res"
@@ -417,6 +417,20 @@ CHANNEL_450NM_STATE={{  states('input_number.elixia_1_channel_450nm') | round(0)
 CHANNEL_660NM_STATE={{  states('input_number.elixia_1_channel_660nm') | round(0) }}
 CHANNEL_735NM_STATE={{  states('input_number.elixia_1_channel_735nm') | round(0) }}
 CHANNEL_5700K_STATE={{  states('input_number.elixia_1_channel_5700k') | round(0) }}
+
+# Grow lamp2: Heliospectra Elixia 
+LAMP_02_IP="10.10.10.10" # Replace with the IP address of the Heliospectra Elixia grow lamp
+MQTT_LAMP_02_CMD_REQ="cmd/lamp02/req"
+MQTT_LAMP_02_CMD_RES="cmd/lamp02/res"
+MQTT_LAMP_02_DT_REQ="dt/lamp02/req"
+MQTT_LAMP_02_DT_RES="dt/lamp02/res"
+LAMP_02_CMD_REQ_AUTOMATION_ALIAS="Lamp 02, Update LED intensity"
+# Channel input number states for automation
+CHANNEL_450NM_STATE={{  states('input_number.elixia_2_channel_450nm') | round(0) }}
+CHANNEL_660NM_STATE={{  states('input_number.elixia_2_channel_660nm') | round(0) }}
+CHANNEL_735NM_STATE={{  states('input_number.elixia_2_channel_735nm') | round(0) }}
+CHANNEL_5700K_STATE={{  states('input_number.elixia_2_channel_5700k') | round(0) }}      
+
 
 
 
