--- a/server/src/config_generator/homeassistant_templates/input_number_template.yaml
+++ b/server/src/config_generator/homeassistant_templates/input_number_template.yaml
@@ -28,6 +28,35 @@
     step: 1
     mode: "box"
 
+  elixia_2_channel_450nm:
+    name: "Elixia-2, Channel: 450nm"
+    initial: 500
+    min: 0
+    max: 1000
+    step: 1
+    mode: "box"
+  elixia_2_channel_660nm:
+    name: "Elixia-2, Channel: 660nm"
+    initial: 500
+    min: 0
+    max: 1000
+    step: 1
+    mode: "box"
+  elixia_2_channel_735nm:
+    name: "Elixia-2, Channel: 735nm"
+    initial: 500
+    min: 0
+    max: 1000
+    step: 1
+    mode: "box"
+  elixia_2_channel_5700k:
+    name: "Elixia-2, Channel: 5700K"
+    initial: 500
+    min: 0
+    max: 1000
+    step: 1
+    mode: "box"
+
 
 
   ec_ref:
