Additional lamp functionality

--- a/.env_template
+++ b/.env_template
@@ -475,6 +475,18 @@ LAMP_1_START_TIME_ID = "input_datetime.lamp_start_time"
 LAMP_1_FINISH_TIME_ID = "input_datetime.lamp_finish_time"
 LAMP_1_TOGGLE_ID = "input_boolean.lamp_control_toggle"
 
+# Lamp 2 controller
+LAMP_2_450_ID = "input_number.elixia_2_channel_450nm"
+LAMP_2_5700_ID = "input_number.elixia_2_channel_5700k"
+LAMP_2_660_ID = "input_number.elixia_2_channel_660nm"
+LAMP_2_735_ID = "input_number.elixia_2_channel_735nm"
+LAMP_2_BLUE_ID = "input_number.lamp_blue"
+LAMP_2_GREEN_ID = "input_number.lamp_green"
+LAMP_2_RED_ID = "input_number.lamp_red"
+LAMP_2_FAR_RED_ID = "input_number.lamp_far_red"
+LAMP_2_START_TIME_ID = "input_datetime.lamp_start_time"
+LAMP_2_FINISH_TIME_ID = "input_datetime.lamp_finish_time"
+LAMP_2_TOGGLE_ID = "input_boolean.lamp_control_toggle"
 
 
 
