First attempt at fan control and regulation

--- a/server/src/config_generator/homeassistant_templates/automations_template.yaml
+++ b/server/src/config_generator/homeassistant_templates/automations_template.yaml
@@ -1320,3 +1320,27 @@
         }
       
   mode: single
+
+  # Ønsket fuktighet
+- alias: {{REF_HUMID_CMD_REQ_AUTOMATION_ALIAS}}
+  description: ''
+  trigger:
+  - platform: state
+    entity_id:
+      - input_number.humid_ref
+  condition: []
+  action:
+  - service: mqtt.publish
+    metadata: {}
+    data_template:
+      qos: 0
+      retain: false
+      topic: {{MQTT_REF_HUMID_CMD_REQ}}
+      payload: >
+        {
+          "cmd": "adjust_ref_humid",
+          "res_topic": {{MQTT_REF_HUMID_CMD_RES}},
+          "value": "{{ REF_HUMID }}"
+        }
+      
+  mode: single
