--- a/.env_template
+++ b/.env_template
@@ -429,9 +429,16 @@ LAMP_02_CMD_REQ_AUTOMATION_ALIAS="Lamp 02, Update LED intensity"
 CHANNEL_450NM_STATE={{  states('input_number.elixia_2_channel_450nm') | round(0) }}
 CHANNEL_660NM_STATE={{  states('input_number.elixia_2_channel_660nm') | round(0) }}
 CHANNEL_735NM_STATE={{  states('input_number.elixia_2_channel_735nm') | round(0) }}
-CHANNEL_5700K_STATE={{  states('input_number.elixia_2_channel_5700k') | round(0) }}      
+CHANNEL_5700K_STATE={{  states('input_number.elixia_2_channel_5700k') | round(0) }}   
 
-
+# Ønsket fuktighet
+MQTT_REF_HUMID_CMD_REQ="cmd/refhumid/req"
+MQTT_REF_HUMID_CMD_RES="cmd/refhumid/res"
+MQTT_REF_HUMID_DT_REQ="dt/refhumid/req"
+MQTT_REF_HUMID_DT_RES="dt/refhumid/res"
+REF_HUMID_CMD_REQ_AUTOMATION_ALIAS="Ref Humid, Update Ref humid"
+# Channel input number states for automation
+REF_HUMID={{  states('input_number.humid_ref') | round(0) }}
 
 
 
@@ -522,3 +529,9 @@ GROW_MAX_RUNTIME = 100
 GROW_DRAINTIME = 150
 GROW_TOGGLE_ID = "input_boolean.grow_control_toggle"
 GROW_RESET_TIME = 3600
+
+
+
+
+# Referanse for fuktighet fra HA
+Ref_humidity = "input_number.humid_ref"
