--- a/.env_template
+++ b/.env_template
@@ -340,7 +340,7 @@ DEWPOINT_13_HA_UNIT="°C"
 DEWPOINT_13_HA_ICON="mdi:thermometer-water"
 
 # Actuators #
-# Relay 01 - 11 
+# Relay 01 - 16
 MQTT_RELAY_01_CMD_REQ="cmd/relay01/req"
 RELAY_01_CMD_REQ_ON_AUTOMATION_ALIAS="Relay 01, Turn on"
 RELAY_01_CMD_REQ_OFF_AUTOMATION_ALIAS="Relay 01, Turn off"
@@ -404,6 +404,25 @@ RELAY_15_CMD_REQ_OFF_AUTOMATION_ALIAS="Relay 15, Turn off"
 MQTT_RELAY_16_CMD_REQ="cmd/relay16/req"
 RELAY_16_CMD_REQ_ON_AUTOMATION_ALIAS="Relay 16, Turn on"
 RELAY_16_CMD_REQ_OFF_AUTOMATION_ALIAS="Relay 16, Turn off"
+
+#Solid state relay
+MQTT_SOLID_STATE_RELAY_01_CMD_REQ="cmd/solid_state_relay01/req"
+MQTT_SOLID_STATE_RELAY_01_CMD_RES="cmd/solid_state_relay01/res"
+MQTT_SOLID_STATE_RELAY_01_DT_REQ="dt/solid_state_relay01/req"
+MQTT_SOLID_STATE_RELAY_01_DT_RES="dt/solid_state_relay01/res"
+SOLID_STATE_RELAY_01_CMD_REQ_AUTOMATION_ALIAS="Solid state relay 01, Update state"
+# Channel input number states for automation
+
+SOLID_STATE_RELAY_01_CMD_REQ_ON_AUTOMATION_ALIAS="Solid state relay 01, Turn on"
+SOLID_STATE_RELAY_01_CMD_REQ_OFF_AUTOMATION_ALIAS="Solid state relay 01, Turn off"
+SOLID_STATE_RELAY_01_CMD_REQ_STOP_PWM_LOOP_AUTOMATION_ALIAS="Solid state relay 01, Stop PWM loop"
+
+SSR_DUTY_CYCLE={{  states('input_number.ssr_duty_cycle') | round(0) }}
+SSR_BASE_PERIOD={{  states('input_number.ssr_base_period') | round(0) }}
+SSR_STOP_LOOP={{  states('input_boolean.solid_state_relay_stop_loop') }}
+
+
+
 
 # Grow lamp1: Heliospectra Elixia 
 LAMP_01_IP="10.10.10.10" # Replace with the IP address of the Heliospectra Elixia grow lamp
