--- a/server/src/config_generator/homeassistant_templates/input_number_template.yaml
+++ b/server/src/config_generator/homeassistant_templates/input_number_template.yaml
@@ -135,3 +135,21 @@
     max: 80
     step: 1
     mode: "box"
+
+  ssr_duty_cycle:
+    name: SSR duty cycle
+    initial: 0
+    min: 0
+    max: 1
+    step: 0.1
+    mode: "box"
+
+  ssr_base_period:
+    name: SSR base period
+    initial: 1
+    min: 0.1
+    max: 20
+    step: 0.1
+    mode: "box"
+
+  
