Regulation for the heating battery with solid state relay and HA referance for temp

--- a/.env_template
+++ b/.env_template
@@ -440,6 +440,15 @@ REF_HUMID_CMD_REQ_AUTOMATION_ALIAS="Ref Humid, Update Ref humid"
 # Channel input number states for automation
 REF_HUMID={{  states('input_number.humid_ref') | round(0) }}
 
+# Ønsket temp
+MQTT_REF_TEMP_CMD_REQ="cmd/reftemp/req"
+MQTT_REF_TEMP_CMD_RES="cmd/reftemp/res"
+MQTT_REF_TEMP_DT_REQ="dt/reftemp/req"
+MQTT_REF_TEMP_DT_RES="dt/reftemp/res"
+REF_TEMP_CMD_REQ_AUTOMATION_ALIAS="Ref temp, Update Ref temp"
+# Channel input number states for automation
+REF_HUMID={{  states('input_number.temp_ref') | round(0) }}
+
 
 
 # Dummy control #
@@ -531,7 +540,8 @@ GROW_TOGGLE_ID = "input_boolean.grow_control_toggle"
 GROW_RESET_TIME = 3600
 
 
-
-
 # Referanse for fuktighet fra HA
 Ref_humidity = "input_number.humid_ref"
+
+# Referanse for temperatur fra HA
+Ref_tempearure = "input_number.temp_ref"
