--- a/server/src/config_generator/homeassistant_templates/input_number_template.yaml
+++ b/server/src/config_generator/homeassistant_templates/input_number_template.yaml
@@ -135,3 +135,11 @@
     max: 80
     step: 1
     mode: "box"
+
+  temp_ref:
+    name: Target temp
+    initial: 20
+    min: 10
+    max: 50
+    step: 1
+    mode: "box"
