Added an app for control of the new fan. Modes like manual, low, medium etc. Modified the original fan_controller app.

--- a/.env_template
+++ b/.env_template
@@ -497,6 +497,11 @@ TEMP_LOW_ID = "input_number.intake_fan_temp_low"
 TEMP_HIGH_ID = "input_number.intake_fan_temp_high"
 INTAKE_FAN_TOGGLE_ID = "input_boolean.intake_fan_toggle"
 
+#New intake fan controller
+FAN_MODE_ID = "input_select.new_intake_fan_modes"
+FAN_MANUAL_TOGGLE_ID = "input_boolean.new_intake_fan_toggle"
+FAN_VOLTAGE_ID = "input_number.new_Intake_fan_voltage"
+
 # Lamp 1 controller
 LAMP_1_450_ID = "input_number.elixia_1_channel_450nm"
 LAMP_1_5700_ID = "input_number.elixia_1_channel_5700k"
