--- a/server/src/config_generator/homeassistant_templates/input_number_template.yaml
+++ b/server/src/config_generator/homeassistant_templates/input_number_template.yaml
@@ -158,6 +158,14 @@
     max: 20
     step: 0.1
     mode: "box"
+  
+  new_Intake_fan_voltage:
+    name: Fan manual voltage
+    initial: 0
+    min: 0
+    max: 10
+    step: 0.1
+    mode: "box"
 
   
 
