Small tweaks to input_number and input_boolean

--- a/server/src/config_generator/homeassistant_templates/input_boolean_template.yaml
+++ b/server/src/config_generator/homeassistant_templates/input_boolean_template.yaml
@@ -123,7 +123,7 @@
 
   new_intake_fan_toggle:
     name: "New intake fan controller"
-    icon: "mdi_fan"
+    icon: "mdi:fan"
 
   lamp_control_toggle:
     name: "Lamp controller"
