--- a/.env_template
+++ b/.env_template
@@ -500,7 +500,7 @@ INTAKE_FAN_TOGGLE_ID = "input_boolean.intake_fan_toggle"
 #New intake fan controller
 FAN_MODE_ID = "input_select.new_intake_fan_modes"
 FAN_MANUAL_TOGGLE_ID = "input_boolean.new_intake_fan_toggle"
-FAN_VOLTAGE_ID = "input_number.new_Intake_fan_voltage"
+FAN_VOLTAGE_ID = "input_number.new_intake_fan_voltage"
 
 # Lamp 1 controller
 LAMP_1_450_ID = "input_number.elixia_1_channel_450nm"
